cmake_minimum_required(VERSION 3.21)


set(THIS_PROJECT_NAME		"Drawing")
set(THIS_VERSION_MAJOR		"0")
set(THIS_VERSION_MINOR		"0")
set(THIS_VERSION_PATCH		"1")
set(THIS_VERSION			"${SSG_VERSION_MAJOR}.${SSG_VERSION_MINOR}.${SSG_VERSION_PATCH}")
set(THIS_NAME_VERSION		"${SSG_PROJECT_NAME} v${SSG_VERSION} (${SSG_VERSION_REVISION})")

project(${THIS_PROJECT_NAME})

set(THIS_SRC_DIR ${PROJECT_SOURCE_DIR}/src)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(src)